--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "noise-fun",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "p5": "^1.5.0"
+  "devDependencies": {
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0"
   }
 }
